{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 56,
  "lineage": "a2338be9-64a5-4de7-6bcc-926307d53344",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9a14b2b8c0c42d9",
            "association_id": "eipassoc-0cec37e89eb63acc2",
            "domain": "vpc",
            "id": "eipalloc-0b9a14b2b8c0c42d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043ffceb18f11d6f8",
            "private_dns": "ip-10-0-1-130.ec2.internal",
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-52-86-70-139.compute-1.amazonaws.com",
            "public_ip": "52.86.70.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:internet-gateway/igw-0e99c32355b48730d",
            "id": "igw-0e99c32355b48730d",
            "owner_id": "689165011413",
            "tags": {
              "Name": "terraform_meenu-igw"
            },
            "tags_all": {
              "Name": "terraform_meenu-igw"
            },
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9a14b2b8c0c42d9",
            "association_id": "eipassoc-0cec37e89eb63acc2",
            "connectivity_type": "public",
            "id": "nat-0dfb0102d5d375346",
            "network_interface_id": "eni-043ffceb18f11d6f8",
            "private_ip": "10.0.1.130",
            "public_ip": "52.86.70.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033d421b58bb93011",
            "tags": {
              "Name": "terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a881bb8f5be6ab4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dfb0102d5d375346",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a881bb8f5be6ab4b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_app_route_table",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:route-table/rtb-0a881bb8f5be6ab4b",
            "id": "rtb-0a881bb8f5be6ab4b",
            "owner_id": "689165011413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dfb0102d5d375346",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_meenu-private_app_route_table"
            },
            "tags_all": {
              "Name": "terraform_meenu-private_app_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:route-table/rtb-0d09d4a946ce4012c",
            "id": "rtb-0d09d4a946ce4012c",
            "owner_id": "689165011413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e99c32355b48730d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_meenu-public-rt"
            },
            "tags_all": {
              "Name": "terraform_meenu-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064692023774a6a5f",
            "route_table_id": "rtb-0a881bb8f5be6ab4b",
            "subnet_id": "subnet-002c9ecebea2a72b1"
          },
          "dependencies": [
            "aws_route_table.private_app_route_table",
            "aws_subnet.private_app_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b09eeed24f4118e",
            "route_table_id": "rtb-0a881bb8f5be6ab4b",
            "subnet_id": "subnet-0bad7d0b725a5073f"
          },
          "dependencies": [
            "aws_route_table.private_app_route_table",
            "aws_subnet.private_app_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0335f3dac00b934e8",
            "route_table_id": "rtb-0d09d4a946ce4012c",
            "subnet_id": "subnet-0f0f9f3f8b2294f88"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de9dc4c02110bb00",
            "route_table_id": "rtb-0d09d4a946ce4012c",
            "subnet_id": "subnet-033d421b58bb93011"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:subnet/subnet-002c9ecebea2a72b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c9ecebea2a72b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689165011413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_meenu-private-app-az1"
            },
            "tags_all": {
              "Name": "terraform_meenu-private-app-az1"
            },
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:subnet/subnet-0bad7d0b725a5073f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad7d0b725a5073f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689165011413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_meenu-private-app-az2"
            },
            "tags_all": {
              "Name": "terraform_meenu-private-app-az2"
            },
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:subnet/subnet-033d421b58bb93011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d421b58bb93011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "689165011413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_meenu-public-az1"
            },
            "tags_all": {
              "Name": "terraform_meenu-public-az1"
            },
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:subnet/subnet-0f0f9f3f8b2294f88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f9f3f8b2294f88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "689165011413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_meenu-public-az2"
            },
            "tags_all": {
              "Name": "terraform_meenu-public-az2"
            },
            "vpc_id": "vpc-03d3c0c3cfb9ade5d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689165011413:vpc/vpc-03d3c0c3cfb9ade5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5e451700db52a9a",
            "default_route_table_id": "rtb-0dd3ea9275aa0e8ea",
            "default_security_group_id": "sg-00f46799fb8909b54",
            "dhcp_options_id": "dopt-40de4d3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d3c0c3cfb9ade5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd3ea9275aa0e8ea",
            "owner_id": "689165011413",
            "tags": {
              "Name": "terraform_vpc_meenu-vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc_meenu-vpc"
            }
          }
        }
      ]
    }
  ]
}